--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "webpack-react",
-  "version": "1.0.0",
+  "name": "figma-plugin-starter",
+  "version": "0.1.0",
   "description": "",
   "main": "code.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
-  "author": "Figma",
+  "author": "Raimonds Sarkanbardis <raimonds.sarkanbardis@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@figma/plugin-typings": "*",
-    "@types/node": "^16.7.1",
-    "css-loader": "^6.2.0",
-    "html-webpack-inline-source-plugin": "0.0.10",
-    "html-webpack-plugin": "^5.3.2",
-    "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.3.5",
+    "@figma/plugin-typings": "^1.58.0",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "css-loader": "^6.7.3",
+    "html-webpack-inline-source-plugin": "^0.0.10",
+    "html-webpack-plugin": "^5.5.0",
+    "react": "^18.2.0",
+    "react-dev-utils": "^12.0.1",
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
-  },
-  "dependencies": {
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "react": "^17.0.2",
-    "react-dev-utils": "^11.0.4",
-    "react-dom": "^17.0.2"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
