--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "code.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --progress",
+    "watch": "webpack --watch"
   },
   "author": "Raimonds Sarkanbardis <raimonds.sarkanbardis@gmail.com>",
   "license": "MIT",
