--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "code.js",
   "scripts": {
-    "build": "webpack --progress",
-    "watch": "webpack --watch"
+    "dev": "webpack --watch",
+    "build": "webpack --progress"
   },
   "author": "Raimonds Sarkanbardis <raimonds.sarkanbardis@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@figma/plugin-typings": "^1.58.0",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "css-loader": "^6.7.3",
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
